line spacing issue due to badges is resolved

--- a/styles/pages/listing.scss
+++ b/styles/pages/listing.scss
@@ -109,11 +109,11 @@
     }
 
     .toolbox {
-        display           : flex;
-        justify-content   : space-between;
-        align-items       : center;
-        padding-bottom    : 1.8rem;
-        margin-bottom     : 2rem;
+        display              : flex;
+        justify-content      : space-between;
+        align-items          : center;
+        padding-bottom       : 1rem;
+        // margin-bottom     : 2rem;
         // border-bottom  : 1px solid #CCCCCC;
 
         .toolbox-right {
